fixed sign in text overlapping the nav bar

--- a/src/pages/createpost/create-form.css
+++ b/src/pages/createpost/create-form.css
@@ -21,7 +21,7 @@ textarea {
 
 p {
   color: red;
-  margin-top: -10px;
+  margin-top: 10px;
   margin-bottom: 15px;
 }
 
